plugins {
    id 'fabric-loom' version "${loom_version}"
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    // Add repositories to retrieve artifacts from in here.
    // You should only use this when depending on other mods because
    // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
    // See https://docs.gradle.org/current/userguide/declaring_repositories.html
    // for more information about repositories.

    mavenCentral()
    maven {
        url = uri("https://repo.opencollab.dev/main/")
    }
}

dependencies {
    // To change the versions see the gradle.properties file
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    // Fabric API. This is technically optional, but you probably want it anyway.
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-entity-events-v1:${project.fabric_api_version}"

    // MySQL Driver
    implementation(include("com.mysql:mysql-connector-j:${mysql_version}"))

    // SQLite Driver
    implementation(include("org.xerial:sqlite-jdbc:${sqlite_version}"))

    // OkHttp for HTTP requests
    implementation(include("com.squareup.okhttp3:okhttp:${project.okhttp3_version}"))

    // Gson for JSON
    implementation(include("com.google.code.gson:gson:${project.gson_version}"))

    // Configurate core + dependencies
    implementation(include("net.kyori:option:1.1.0"))
    implementation(include("io.leangen.geantyref:geantyref:1.3.13"))
    implementation(include("org.jetbrains.kotlin:kotlin-stdlib:2.3.20-RC"))
    implementation(include("com.squareup.okio:okio:3.16.4"))
    implementation(include("org.spongepowered:configurate-core:${project.configurate_core_version}"))
    implementation(include("org.spongepowered:configurate-hocon:${project.configurate_hocon_version}"))

    // Password4j for password hashing
    implementation(include("com.password4j:password4j:${project.password4j_version}"))

    // Floodgate API by GeyserMC (compileOnly, not shaded)
    compileOnly("org.geysermc.floodgate:api:${project.floodgate_version}")

    // LuckPerms API (compileOnly, not shaded)
    compileOnly("net.luckperms:api:5.4")

    // 2FA Library
    implementation(include("com.j256.two-factor-auth:two-factor-auth:1.3"))

    // Captcha API
    implementation(include("com.github.whvcse:easy-captcha:1.6.2"))
}
processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": inputs.properties.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

tasks.withType(JavaExec).configureEach {
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}


java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

jar {
    inputs.property "archivesName", project.base.archivesName

    from("LICENSE") {
        rename { "${it}_${inputs.properties.archivesName}" }
    }
}

// configure the maven publication
publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifactId = project.archives_base_name
            from components.java
        }
    }

    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
    repositories {
        // Add repositories to publish to here.
        // Notice: This block does NOT have the same function as the block in the top level.
        // The repositories here will be used for publishing your artifact, not for
        // retrieving dependencies.
    }
}